# Karage

./: Cargo.toml  README.md
alpaca-rs/: Cargo.toml
alpacars/: Cargo.toml
alpacars/src/: lib.rs
alpacars/src/client/: mod.rs
alpacars/src/models/: account.rs  bars.rs  mod.rs  quote.rs
archive/agents/: mod.rs
archive/agents/alpaca_crypto_arb/: arb.rs
archive/agents/binance_market_making/: automated_liquidity_provider.rs  market_data_provider.rs  mod.rs  position_monitor.rs
archive/models/: mod.rs
archive/webull-rs/: Cargo.toml
archive/webull-rs/src/: lib.rs
archive/webull-trader/: Cargo.toml
archive/webull-trader/src/: main.rs
karage/: Cargo.toml
karage/src/: main.rs  market_data.rs  quoter.rs
karage/src/libs/agents/: mod.rs
karage/src/libs/agents/binance_market_making/: market_data_provider.rs  mod.rs
karage/src/libs/models/: mod.rs
prototyping/polygon/: polygon.ipynb  requirements.txt
src/: main.rs
src/agents/: mod.rs
src/agents/binance_market_making/: automated_liquidity_provider.rs  market_data_provider.rs  mod.rs
src/libs/: mod.rs
src/libs/agents/: mod.rs
src/libs/agents/alpaca_pair_trader/: mod.rs
src/libs/agents/alpaca_pair_trading/: mod.rs
src/libs/agents/binance_market_making/: automated_liquidity_provider.rs  position_monitor.rs
src/models/: nbbo.rs
src/modules/: automated_liquidity_provider.rs  market_data_provider.rs  mod.rs  position_monitor.rs
webull-rs/: Cargo.toml
webull-rs/src/: lib.rs
webull-trader/: Cargo.toml
webull-trader/src/: main.rs
