[package]
name = "karage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
curl = "0.4.44"
dotenv_codegen = "0.15.0"
http = "0.2.8"
