[package]
name = "alpacars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
tokio = { version = "1", features = ["full"] }
url = "2.2.2"