[package]
name = "karage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.27.2"
tokio = { version = "1", features = ["full"] }
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
dotenv = "0.15.0"
futures = "0.3.29"
